--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ nav {
   z-index: 99;
   background: #fff;
 }
+@media screen and (max-width: 500px) {
+  nav {
+    padding: 10px 0;
+  }
+}
 nav .title {
   font-family: "Anton", sans-serif;
   font-size: 30px;
@@ -40,6 +45,11 @@ nav .title {
 }
 nav .title:hover {
   color: aquamarine;
+}
+@media screen and (max-width: 500px) {
+  nav .icon {
+    display: none;
+  }
 }
 nav .icon a {
   text-decoration: none;
@@ -51,6 +61,58 @@ nav .icon a img {
 }
 nav .icon a img:hover {
   filter: invert(94%) sepia(13%) saturate(523%) hue-rotate(22deg) brightness(91%) contrast(85%);
+}
+nav .menu {
+  display: none;
+}
+@media screen and (max-width: 500px) {
+  nav .menu {
+    display: block;
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.mb-menu {
+  display: none;
+}
+@media screen and (max-width: 500px) {
+  .mb-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.7);
+    z-index: 99;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mb-menu .error {
+    position: absolute;
+    right: 45px;
+    top: 13px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mb-menu img {
+    width: 40px;
+    height: 40px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mb-menu a {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: #000;
+  }
 }
 
 .slick {
