--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,9 @@ nav {
     width: 100%;
     z-index: 99;
     background: #fff;
+    @media screen and(max-width:500px) {
+        padding: 10px 0;
+    }
     .title {
         font-family: $mainFont;
         font-size: 30px;
@@ -43,6 +46,9 @@ nav {
     }
 
     .icon {
+        @media screen and(max-width:500px) {
+            display: none;
+        }
         a {
             text-decoration: none;
             img {
@@ -53,6 +59,55 @@ nav {
                     filter: invert(94%) sepia(13%) saturate(523%) hue-rotate(22deg) brightness(91%) contrast(85%);
                 }
             }
+        }
+    }
+    .menu {
+        display: none;
+        @media screen and(max-width:500px) {
+            display: block;
+            width: 40px;
+            height: 40px;
+        }
+    }
+}
+// 手機版選單
+.mb-menu {
+    display: none;
+    @media screen and(max-width:500px) {
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.7);
+        z-index: 99;
+    }
+    .error {
+        @media screen and(max-width:500px) {
+            position: absolute;
+            right: 45px;
+            top: 13px;
+        }
+    }
+
+    img {
+        @media screen and(max-width:500px) {
+            width: 40px;
+            height: 40px;
+        }
+    }
+    a {
+        @media screen and(max-width:500px) {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 10px;
+            text-decoration: none;
+            color: #000;
         }
     }
 }
